# agentic-engineering

./: .env.example  .geminiignore  .gitignore  .pre-commit-config.yaml  AGENT_CONTEXT.md  GEMINI.md  Justfile  LEARNING_LOG.md  PROJECT_STATE.md  README.md  ROADMAP.md  pyproject.toml
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: weekly-check-in.md
.github/workflows/: ci.yml
docs/competency/: COMPETENCY_MAP.md  README.md  ROADMAP.md  SCORECARD.md  TRACEABILITY.md
docs/decisions/: ADR-0000-template.md
docs/engineering/: ci-cd.md  pr-workflow.md
docs/kb/: README.md  START_HERE.md  index.md
docs/kb/engineering/: git-tagging.md
docs/products/: README.md
docs/products/harness/: ARCHITECTURE.md  EVALS.md  README.md  RISKS.md  ROADMAP.md  SCOPE.md  TAXONOMY.md  WORKFLOWS.md
docs/week-01/: notes.md
docs/weeks/: README.md
prompts/: commit_package.md  create_adr.md  distill_to_kb.md  migrate_three_pillars.md  prepare_weekly_review.md  score_competencies.md  session_bootstrap.md
src/agentic_engineering/: __main__.py  doctor.py
tests/unit/: test_doctor.py  test_traceability.py  test_traceability_failures.py
